Fix logo on mobile

--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -22,6 +22,10 @@
     max-width: 1700px;
     align-items: center;
     padding: 0 24px;
+
+    @media only screen and (max-width: 600px) {
+      padding: 0 16px;
+    }
   }
 
   .logo-container {
@@ -64,7 +68,7 @@
           display: inline-block;
 
           @media only screen and (max-width: 600px) {
-            width: 0px;
+            display: none;
           }
         }
       }
